completed desktop mode

--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -16,14 +16,14 @@
     <header>
       <nav class="nav-section">
         <div class="logo-box">
-          <a href="#"><img src="/img/logo.png" alt="KJM" class="logo"></a>
+          <a href="/index.html"><img src="/img/logo.png" alt="KJM" class="logo"></a>
         </div>
         <ul class="nav-list">
           <li class="nav-item"><a href="/index.html" class="nav-link">Explore</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Book-flight</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">About us</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+          <li class="nav-item"><a href="/index.html#about" class="nav-link">About us</a></li>
+          <li class="nav-item"><a href="#help" class="nav-link">Help</a></li>
         </ul>
 
         <div id="menu-icon" class="nav-link">
@@ -194,7 +194,7 @@
         authentication</p>
     </div>
     <div class="overlay hidden"></div>
-    <footer>
+    <footer id="help">
       <div class="footer">
         <div class="contact">
           <h2>Contact Us</h2>
