--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <ul class="nav-list">
           <li class="nav-item"><a href="#" class="nav-link">Explore</a></li>
-          <li class="nav-item"><a href="bookflight/book.html#flight" class="nav-link">Book-flight</a>
+          <li class="nav-item"><a href="bookflight/book.html" class="nav-link">Book-flight</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">About us</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+          <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
+          <li class="nav-item"><a href="#help" class="nav-link">Help</a></li>
         </ul>
 
         <div id="menu-icon" class="nav-link">
@@ -62,7 +62,7 @@
       </div>
     </header>
     <section>
-      <div class="focus">
+      <div class="focus" id="about">
         <div class="focus-text">
           <p>We focused on providing world class aviation services to our esteemed customers.</p>
         </div>
@@ -79,7 +79,7 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer id="help">
       <div class="footer">
         <div class="contact">
           <h2>Contact Us</h2>
