--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="book.css">
+    <link rel="stylesheet" href="/media.css">
     <script src="https://kit.fontawesome.com/f698b33fa3.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
@@ -189,7 +190,7 @@
         </div>
       </div>
       <p class="note">please send a screenshot/camera shot of your receipt to our mail <a
-          href="#">kjmairlines@gmail.com</a> for
+          href="mailto:kjmairlines@gmail.com">kjmairlines@gmail.com</a> for
         internal
         authentication</p>
     </div>
