added about and help section

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       </div>
     </header>
     <section>
-      <div class="focus" id="about">
+      <div class="focus">
         <div class="focus-text">
           <p>We focused on providing world class aviation services to our esteemed customers.</p>
         </div>
       </div>
     </section>
-    <section>
+    <section id="about">
       <div class="trip">
         <h2>Plan Your Trip</h2>
         <div class="trip-gallery">
@@ -80,7 +80,46 @@
         </div>
       </div>
     </section>
-    <footer id="help">
+    <section>
+      <div class="about">
+        <div class="mission">
+          <img src="img/jet.png" alt="">
+          <h3>Our Vision</h3>
+          <p>KJM airlines' vision
+            is to be the world's most
+            loved, most efficient,
+            and most profitable airline.</p>
+        </div>
+        <div class="mission">
+          <img src="img/jet.png" alt="">
+          <h3>Our Mission</h3>
+          <p>The primary aim of the airline
+            is to help people get connected
+            through low-cost, efficient, and
+            friendly air travel.</p>
+        </div>
+        <div class="mission">
+          <img src="img/jet.png" alt="">
+          <h3>Local Content</h3>
+          <p>One the major idea that brings
+            about KJMairways is to create
+            massive emplyment and add
+            colour to the American airways.</p>
+        </div>
+      </div>
+    </section>
+    <section id="help">
+      <div class="help">
+        <h2>Need Help?</h2>
+        <p>(1) Please revert to our email incase of emergency</p>
+        <p>(2) kindly check meet our KJM help-desk officials to make physical complaint</p>
+        <p>(3) Good customer service adds value and attracts urgent attention in case of emergenc</p>
+        <p>(4) please remember to send a screen copy of your payment and flight info to our email
+          <span>kjmairlines@gmail.com</span>
+        </p>
+      </div>
+    </section>
+    <footer>
       <div class="footer">
         <div class="contact">
           <h2>Contact Us</h2>
@@ -99,7 +138,7 @@
         </ul>
         <ul>
           <h2>Quick Link</h2>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="#help">FAQ</a></li>
           <li><a href="#">Refund</a></li>
           <li><a href="#">Cancel Trip</a></li>
           <li><a href="#">Terms and Condition</a></li>
