--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -24,7 +24,7 @@
           <li class="nav-item"><a href="#" class="nav-link">Book-flight</a>
           </li>
           <li class="nav-item"><a href="/index.html#about" class="nav-link">About us</a></li>
-          <li class="nav-item"><a href="#help" class="nav-link">Help</a></li>
+          <li class="nav-item"><a href="/index.html#help" class="nav-link">Help</a></li>
         </ul>
 
         <div id="menu-icon" class="nav-link">
@@ -195,7 +195,7 @@
         authentication</p>
     </div>
     <div class="overlay hidden"></div>
-    <footer id="help">
+    <footer>
       <div class="footer">
         <div class="contact">
           <h2>Contact Us</h2>
