--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -150,9 +150,9 @@
 
       </div>
     </section>
-    <div class="modal hidden">
+    <div class="modal">
       <button class="close">&times;</button>
-      <img src="/img/logo.png" alt="">
+      <img src="/img/logo.png" alt="" class="modal-img">
       <h2>PAYMENT INFORMATION</h2>
       <div class="mailbox">
         <h3 class="modal-name">JOHN SMITH</h3>
@@ -193,6 +193,7 @@
           href="mailto:kjmairlines@gmail.com">kjmairlines@gmail.com</a> for
         internal
         authentication</p>
+      <img src="/img/scan.png" alt="" class="scan">
     </div>
     <div class="overlay hidden"></div>
     <footer>
