--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -150,7 +150,7 @@
 
       </div>
     </section>
-    <div class="modal">
+    <div class="modal hidden">
       <button class="close">&times;</button>
       <img src="/img/logo.png" alt="" class="modal-img">
       <h2>PAYMENT INFORMATION</h2>
