--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="#"><img src="img/logo.png" alt="KJM" class="logo"></a>
         </div>
         <ul class="nav-list">
-          <li class="nav-item"><a href="#" class="nav-link">Explore</a></li>
+          <li class="nav-item explorer"><a href="#" class="nav-link">Explore</a></li>
           <li class="nav-item"><a href="bookflight/book.html" class="nav-link">Book-flight</a>
           </li>
           <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
@@ -119,6 +119,30 @@
         </p>
       </div>
     </section>
+    <div class="explore hidden">
+      <button class="closet">&times;</button>
+      <div class="explore-box">
+        <img src="img/explore.png" alt="">
+        <img src="img/explore-2.png" alt="">
+      </div>
+      <div class="explore-box">
+        <img src="img/explore.png" alt="">
+        <img src="img/explore-2.png" alt="">
+      </div>
+      <div class="explore-box">
+        <img src="img/explore.png" alt="">
+        <img src="img/explore-2.png" alt="">
+      </div>
+      <div class="explore-box">
+        <img src="img/explore.png" alt="">
+        <img src="img/explore-2.png" alt="">
+      </div>
+      <div class="explore-box">
+        <img src="img/explore.png" alt="">
+        <img src="img/explore-2.png" alt="">
+      </div>
+    </div>
+    <div class="omalay hidden"></div>
     <footer>
       <div class="footer">
         <div class="contact">
