--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="nav-section">
         <div class="logo-box">
-          <a href="#"><img src="img/logo.png" alt="KJM" class="logo"></a>
+          <a href="#"><img src="img/head-logo.png" alt="KJM" class="logo"></a>
         </div>
         <ul class="nav-list">
           <li class="nav-item explorer"><a href="#" class="nav-link">Explore</a></li>
