--- a/bookflight/book.html
+++ b/bookflight/book.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="nav-section">
         <div class="logo-box">
-          <a href="/index.html"><img src="/img/logo.png" alt="KJM" class="logo"></a>
+          <a href="/index.html"><img src="/img/head-logo.png" alt="KJM" class="logo"></a>
         </div>
         <ul class="nav-list">
           <li class="nav-item"><a href="/index.html" class="nav-link">Explore</a></li>
